<resources>
    <string name="app_name">Debt Management System[DMS]</string>
    <string name="txvWelcome">Welcome To The Debt Management System</string>
    <string name="txvLoginOrReg">Log In or Register if you have not yet Registered</string>
    <string name="txvSecondMsg">Collecting your money from your Customers made easy</string>
    <string name="txvPassword">Password</string>
    <string name="txtUser">Enter valid username</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register now</string>
    <string name="txtPassword">Enter password</string>
    <string name="txtUsername">Username</string>
    <string name="txvReg" />
    <string name="txvRegister">Register as a Debt collector</string>
    <string name="txvConfirmPassword">Re-Enter</string>
    <string name="edtConfirm">Confirm Password</string>
    <string name="txvNames">Name(S)</string>
    <string name="txvCell">Phone Number</string>
    <string name="txvItem">Item Purchased</string>
    <string name="txvTotal">Total Amount owed</string>
    <string name="txvPercentage">Deposit Percentage</string>
    <string name="txvDepositedAmount">Deposit Amount:</string>
    <string name="txvCurrent">Current Amount Owed:</string>
    <string name="txtNames"><![CDATA[First & Last name]]></string>
    <string name="txtPhone">Enter cell number</string>
    <string name="txvDisplayCurrentOwed">Amount Owed</string>
    <string name="btnSaveCustomer">Save Customer</string>
    <string name="btnTest">Test</string>
    <string name="btnAmounts">Show amounts</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>